--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
-{% block title %}Consultas{% endblock %}
+{% block title %}Home{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
 {% block content %}
-  <h1>Consultas</h1>
+  <h1>Home</h1>
+  <p>Welcome to my awesome page.</p>
 {% endblock %}
