--- a/flaskps/templates/layout.html
+++ b/flaskps/templates/layout.html
@@ -12,6 +12,16 @@
       {% endblock %}
     </div>
     <div id="content">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul class=flashes>
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+
       {% block content %}
       {% endblock %}
     </div>
